# vedy_back

./: Cargo.toml
migrations/: 001_init_db.up.sql
scrapping/: output.csv  scrap.sh  test.html
src/: error.rs  main.rs
src/modules/: mod.rs
src/modules/front/: mod.rs
src/modules/front/landing/: mod.rs
src/modules/front/landing/config/: mod.rs  model.rs  port.rs  service.rs
src/modules/front/landing/config/api/: handler.rs  mod.rs
src/modules/front/landing/config/infrastructure/: pg_adapter.rs  s3.rs
src/modules/front/landing/feedback/: model.rs  port.rs  service.rs
src/modules/front/landing/hero/: model.rs  port.rs  service.rs
src/modules/front/social_media/: model.rs  port.rs  service.rs
src/modules/front/social_media/api/: handler.rs  mod.rs
src/modules/front/social_media/infrastructure/: pg_adapter.rs
src/modules/property/: model.rs  port.rs  service.rs
src/modules/property/api/: handler.rs  mod.rs
src/modules/property/infrastructure/: mod.rs  pg_adapter.rs  s3.rs
src/modules/stats/: mod.rs  model.rs  port.rs  service.rs
src/modules/stats/api/: handler.rs  mod.rs
src/modules/stats/infrastructure/: pg_adapter.rs
src/modules/tenant/: mod.rs  model.rs  port.rs  service.rs
src/modules/tenant/api/: handler.rs  mod.rs
src/modules/tenant/infrastructure/: mod.rs  pg_adapter.rs
src/utils/: config.rs  mod.rs
src/utils/database/: mod.rs  models.rs  postgres.rs
src/utils/lucia/: error.rs  mod.rs  model.rs  port.rs  service.rs
src/utils/lucia/infrastructure/: mod.rs  pg_adatper.rs
src/utils/s3/: mod.rs  s3_repository.rs
(+9 files in other folders)
