[package]
name = "vendy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.63"
derive_builder = "0.20.0"
actix-web = "4.9.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls","chrono","migrate"] }
actix-cors = "0.7.0"
env_logger = "0.11.5"
log = "0.4.22"
async-trait = "0.1.80"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.36.0"
uuid = { version = "1.10.0", features = ["v4"] }
aws-config = "1.5.6"
aws-sdk-s3 = "1.49.0"
aws-smithy-http = "0.60.11"
http = "1.1.0"
futures = "0.3.30"
